--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -2,8 +2,18 @@
 
 
 {% block main %}
+<div class="row">
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      <a href="{% url 'logout' %}">Logout</a>
+    </div>
+  </div>
 
-<h1> Seja bem vindo</h1>
 
 
 {% endblock %}
