--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -7,10 +7,17 @@
       One of three columns
     </div>
     <div class="col-sm">
-      One of three columns
+        ola {{ usuario.funcionario.nome }}
+        <a href="{% url 'list_funcionarios'%}">Gerenciar Funcionarios</a>
     </div>
     <div class="col-sm">
       <a href="{% url 'logout' %}">Logout</a>
+
+        {% if usuario.funcionario.empresa %}
+            <a href="{% url 'edit_empresa' usuario.funcionario.empresa.id %}">Editar empresa</a>
+        {% else %}
+            <a href="{% url 'create_empresa' %}">Criar empresa</a>
+        {% endif %}
     </div>
   </div>
 
