--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,6 +9,9 @@
     <div class="col-sm">
         ola {{ usuario.funcionario.nome }}
         <a href="{% url 'list_funcionarios'%}">Gerenciar Funcionarios</a>
+        <a href="{% url 'list_departamentos'%}">Gerenciar Departamentos</a>
+        <a href="{% url 'list_hora_extra'%}">Gerenciar Banco de horas</a>
+
     </div>
     <div class="col-sm">
       <a href="{% url 'logout' %}">Logout</a>
