--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
-
 {% block main %}
+
+
 <form method="post">
     {% csrf_token %}
+
     {{ form|bootstrap }}
     <button type="submit" class="btn btn-primary">Salvar</button>
+
+    {% if object %}
+         <a href="{% url 'delete_hora_extra' object.id %}">Deletar</a>
+    {% endif %}
 </form>
+
+<br>
 {% endblock %}
