--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -7,9 +7,9 @@
       One of three columns
     </div>
     <div class="col-sm">
-        ola {{ usuario.funcionario.nome }}
-        <a href="{% url 'list_funcionarios'%}">Gerenciar Funcionarios</a>
-        <a href="{% url 'list_departamentos'%}">Gerenciar Departamentos</a>
+        ola {{ usuario.funcionario.nome }}<br>
+        <a href="{% url 'list_funcionarios'%}">Gerenciar Funcionarios</a><br>
+        <a href="{% url 'list_departamentos'%}">Gerenciar Departamentos</a><br>
         <a href="{% url 'list_hora_extra'%}">Gerenciar Banco de horas</a>
 
     </div>
