--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_list.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_list.html
@@ -8,7 +8,7 @@ Banco de horas
 <br>
     {% for registro_re in object_list %}
 
-         <a href="{% url 'update_hora_extra' registro_re.id %}">{{ registro_re }}</a>
+         <a href="{% url 'update_hora_extra_base' registro_re.id %}">{{ registro_re }}</a>
 
          <a href="{% url 'delete_hora_extra' registro_re.id %}">Deletar</a>
         <br>
@@ -17,4 +17,5 @@ Banco de horas
         <h2>Não existem registros de horas no banco de dados</h2>
     {% endif %}
      <a href="{% url 'create_hora_extra' %}" class="btn btn-primary">Novo registro</a>
+     <a href="{% url 'exportar_csv' %}" class="btn btn-primary">Csv</a>
 {% endblock %}
