--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -10,7 +10,10 @@
         ola {{ usuario.funcionario.nome }}<br>
         <a href="{% url 'list_funcionarios'%}">Gerenciar Funcionarios</a><br>
         <a href="{% url 'list_departamentos'%}">Gerenciar Departamentos</a><br>
-        <a href="{% url 'list_hora_extra'%}">Gerenciar Banco de horas</a>
+        <a href="{% url 'list_hora_extra'%}">Gerenciar Banco de horas</a><br>
+        <!--<a href="{% url 'pdf_reportlab'%}">Gerar PDF reportlab</a>
+        <a href="{% url 'relatorio_funcionarios'%}">Gerar PDF Funcionarios</a>-->
+
 
     </div>
     <div class="col-sm">
