--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -12,6 +12,7 @@
 </form>
 
 <br>
+
 <h2>Documentos</h2>
 <ul>
 {% for documento in object.documento_set.all %}
@@ -22,10 +23,32 @@
 </ul>
 
 
+
+
 {% if object %}
     <a href="{% url 'create_documento' object.id %}" class="btn btn-success">
     Adicionar documento
     </a>
+
+
 {% endif %}
+
+<h2>Banco de horas</h2>
+<ul>
+{% for registro_hora in object.registrohoraextra_set.all %}
+    <li>
+        <a href="{% url 'update_hora_extra' registro_hora.id %}"> {{ registro_hora.motivo }} | {{ registro_hora.horas }}</a><br>
+    </li>
+{% endfor %}
+</ul>
+
+<h3> Total de horas extras {{ object.total_horas_extra }}</h3>
+
+{% if object %}
+    <a href="{% url 'create_hora_extra' %}" class="btn btn-success">
+    Novo registro hora extra
+    </a>
+{% endif %}
+
 
 {% endblock %}
