--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load bootstrap %}
 {% block main %}
 
@@ -10,9 +11,27 @@
     <button type="submit" class="btn btn-primary">Salvar</button>
 
     {% if object %}
-         <a href="{% url 'delete_hora_extra' object.id %}">Deletar</a>
+         <a href="{% url 'delete_hora_extra' object.id %}" class="btn btn-danger">Deletar</a>
+
+
     {% endif %}
-</form>
+   <button onclick="utilizouHoraExtra({{ object.id }})" class="btn btn-info" type="button">Marcar como utilizado
+   </button>
+    <button onclick="utilizouHoraExtra({{ object.id }})" class="btn btn-info" type="button">Marcar como não utilizado
+    </button>
+
+    </form>
+    <br>
+    <h2 id="horas_atualizadas"> {{ object.funcionario.total_horas_extra }}</h2>
+
 
 <br>
+<p id="mensagem"></p>
+
+{% endblock %}
+
+{% block static %}
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/funcoes_ajax.js' %}"></script>
+
 {% endblock %}
