--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,14 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 
+   {% block staticcss %} {% endblock %}
 </head>
 <body>
     <div class="container">
         {% block main %} {% endblock %}
     </div>
+    {% block static %}
+
+    {% endblock %}
 </body>
 </html>
