--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block menu %}
+
+{% endblock %}
+
+
+
 {% block main %}
 
 <form method="post">
-    {% csrf_token%}
+    {% csrf_token %}
     {{ form|bootstrap }}
     <button type="submit" class="btn btn-primary">Login</button>
 
